# ChangeLog for kde-base/system-config-printer-kde
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/system-config-printer-kde/ChangeLog,v 1.21 2010/03/30 22:07:48 spatz Exp $

*system-config-printer-kde-4.4.2 (30 Mar 2010)

  30 Mar 2010; Dror Levin <spatz@gentoo.org>
  +system-config-printer-kde-4.4.2.ebuild:
  Version bump

  27 Mar 2010; Maciej Mrozowski <reavertm@gentoo.org>
  system-config-printer-kde-4.4.0.ebuild,
  system-config-printer-kde-4.4.1.ebuild:
  Depend on python-2, run cleanup and convert python 'shebangs'

  27 Mar 2010; Maciej Mrozowski <reavertm@gentoo.org>
  system-config-printer-kde-4.4.0.ebuild,
  system-config-printer-kde-4.4.1.ebuild:
  Raised system-config-printer-common deps to 1.1.18

*system-config-printer-kde-4.4.1 (02 Mar 2010)

  02 Mar 2010; Theo Chatzimichos <tampakrap@gentoo.org>
  +system-config-printer-kde-4.4.1.ebuild:
  Version bump

*system-config-printer-kde-4.4.0 (09 Feb 2010)

  09 Feb 2010; Alexey Shvetsov <alexxy@gentoo.org>
  +system-config-printer-kde-4.4.0.ebuild:
  Version bump to KDE SC 4.4.0

*system-config-printer-kde-4.3.5 (25 Jan 2010)

  25 Jan 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  +system-config-printer-kde-4.3.5.ebuild:
  Version bump

  11 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -system-config-printer-kde-4.3.1.ebuild:
  Drop KDE SC-4.3.1.

*system-config-printer-kde-4.3.4 (01 Dec 2009)

  01 Dec 2009; Alex Alexander <wired@gentoo.org>
  +system-config-printer-kde-4.3.4.ebuild:
  Version bump

  29 Nov 2009; Raúl Porcel <armin76@gentoo.org>
  system-config-printer-kde-4.3.3.ebuild:
  Add ~sparc

  08 Nov 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -system-config-printer-kde-4.3.2.ebuild:
  Drop KDE 4.3.2

  08 Nov 2009; Alexey Shvetsov <alexxy@gentoo.org>
  -system-config-printer-kde-4.2.4.ebuild:
  Drop KDE 4.2.4

  07 Nov 2009; Joseph Jezak <josejx@gentoo.org>
  system-config-printer-kde-4.3.1.ebuild,